--- a/logistic_regression_tutorial.ipynb
+++ b/logistic_regression_tutorial.ipynb
@@ -11,11 +11,11 @@
     "The response variable ***y*** takes a discrete value and represents class membership. E.g. we might want to regress number of hours studied onto pass/fail an exam:\n",
     "$$y \\in {0, 1} \\space where \\space 0 = Pass \\space and \\space 1 = Fail$$\n",
     "We will also aim to generate a probability of class membership.\n",
-    "<img src=\"img\\probability_passing_exam.png\" width=\"640\" height=\"480\" />\n",
+    "![](img\\probability_passing_exam.png)\n",
     "\n",
     "### What makes classification works? The decision boundary\n",
     "We need to make a “decision” about each observation as to which class it belongs to. With two features we might find a classification situation like this. Our goal will be to find an affine set (in this case a line) that “best” separates our two classes.\n",
-    "<img src=\"img\\decision_boundary.png\" width=\"640\" height=\"480\" />\n",
+    "![](img\\decision_boundary.png)\n",
     "\n",
     "### Here comes the Logistic Regression\n",
     "#### Overview\n",
@@ -29,7 +29,7 @@
     "\n",
     "$$\\sigma(x) = \\frac{e^h}{e^h+1} = \\frac{1}{1+e^{-x}}$$\n",
     "\n",
-    "<img src=\"img\\sigmoid.png\" width=\"640\" height=\"480\" />\n",
+    "![](img\\sigmoid.png\")\n",
     "\n",
     "#### Hypothesis\n",
     "Whereas in linear regression we had (assuming the bias is added to ***x***)\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:25.815427+08:00",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:25.819929+08:00",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:25.932143+08:00",
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:26.084001+08:00",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:26.190058+08:00",
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:26.193442+08:00",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:26.198266+08:00",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:26.203441+08:00",
@@ -372,7 +372,7 @@
     "\n",
     "### Stochastic Gradient Descent (Optional)\n",
     "If we’re at the red point the gradient is going to tell us how to change theta in order to reduce the cost - move towards the left, make theta smaller.\n",
-    "<img src=\"img\\stochastic_gradient_descent.png\" width=\"640\" height=\"480\" />\n",
+    "![](img\\stochastic_gradient_descent.png)\n",
     "We use the derivative of the loss function wrt the parameters to tell us how to change the parameters in order to lower the loss\n",
     "The general form of an update is\n",
     "$$Repeat\\{\\theta_j := \\theta_j-\\alpha\\frac{\\partial}{\\partial\\theta_j}J(\\theta)\\}$$\n",
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:27.615953+08:00",
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:27.700857+08:00",
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:28.189431+08:00",
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:28.509834+08:00",
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:33.175503+08:00",
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-18T14:52:33.198194+08:00",
